--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "files_manager",
   "version": "1.0.0",
   "description": "A simple file management API built with Node.js.",
-  "author": "Bezaleel Olakunori <bezaleeloci@gmail.com>",
-  "license": "MIT",
+  "author": "Sunday Bukola <sundaybukola10@gmail.com>",
   "private": true,
   "main": "server.js",
   "scripts": {
@@ -55,12 +54,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/B3zaleel/alx-files_manager"
+    "url": "https://github.com/Mavenry/alx-files_manager"
   },
   "bugs": {
-    "url": "https://github.com/B3zaleel/alx-files_manager/issues"
+    "url": "https://github.com/Mavenry/alx-files_manager/issues"
   },
-  "homepage": "https://github.com/B3zaleel/alx-files_manager/blob/main/README.md",
+  "homepage": "https://github.com/Mavenry/alx-files_manager/blob/main/README.md",
   "engines": {
     "node": "16.x",
     "npm": "8.x",
